lab3/contained-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itdt-contained-frontend-service
spec:
  selector:
    app: itdt-contained-frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
