lab3/contained-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itdt-contained-frontend-ingress
spec:
  tls:
    - hosts:
        - malkov-frontend.com
      secretName: itdt-contained-frontend-tls
  rules:
    - host: malkov-frontend.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: itdt-contained-frontend-service
                port:
                  number: 3000
